--- a/Book.DAL/Book.DAL.csproj
+++ b/Book.DAL/Book.DAL.csproj
@@ -43,6 +43,7 @@
     <Compile Include="T_Base_Book.cs" />
     <Compile Include="T_Base_In.cs" />
     <Compile Include="T_Base_Provider.cs" />
+    <Compile Include="T_Base_User.cs" />
     <Compile Include="T_Stock_Report.cs" />
   </ItemGroup>
   <ItemGroup>
