--- a/Book.Web/Book.Web.csproj
+++ b/Book.Web/Book.Web.csproj
@@ -1009,6 +1009,7 @@
     <Content Include="Views\StockReport\Index.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
