--- a/Book.Web/Web.config
+++ b/Book.Web/Web.config
@@ -11,6 +11,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <system.web>
+    <!--拦截-->
+    <authentication mode="Forms">
+      <forms loginUrl="/home/login" name="Stock.APSXAUTH" path="/" protection="All" timeout="30"/>
+    </authentication>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
