--- a/Book.DAL/Book.DAL.csproj
+++ b/Book.DAL/Book.DAL.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="T_Base_Book.cs" />
+    <Compile Include="T_Base_Home.cs" />
     <Compile Include="T_Base_In.cs" />
     <Compile Include="T_Base_Provider.cs" />
     <Compile Include="T_Base_User.cs" />
