--- a/Book.Model/Book.Model.csproj
+++ b/Book.Model/Book.Model.csproj
@@ -41,7 +41,9 @@
   <ItemGroup>
     <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="T_Base_Admin.cs" />
     <Compile Include="T_Base_Book.cs" />
+    <Compile Include="T_Base_Menu.cs" />
     <Compile Include="T_Base_Provider.cs" />
     <Compile Include="T_Base_User.cs" />
     <Compile Include="T_Stock_In.cs" />
