--- a/Book.DAL/Book.DAL.csproj
+++ b/Book.DAL/Book.DAL.csproj
@@ -40,12 +40,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="T_Base_Admin.cs" />
     <Compile Include="T_Base_Book.cs" />
     <Compile Include="T_Base_Customer.cs" />
     <Compile Include="T_Base_Home.cs" />
     <Compile Include="T_Base_In.cs" />
     <Compile Include="T_Base_Provider.cs" />
     <Compile Include="T_Base_User.cs" />
+    <Compile Include="T_Stock_Out.cs" />
     <Compile Include="T_Stock_Report.cs" />
   </ItemGroup>
   <ItemGroup>
